fix mobile nav bug - youtube div and footer visibility

--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,7 @@ h6 {
   position: relative;
   height: 25vh;
   background-color: #131416;
+  z-index: 0;
 }
 .footer-info {
   position: absolute;
@@ -585,6 +586,7 @@ h6 {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  z-index: 1000;
   filter: opacity(95%);
   height: 50vh;
 }
@@ -602,7 +604,8 @@ h6 {
   color: #fff;
 }
 .youtube-text h2 {
-  width: 250px;
+  text-align: center;
+  max-width: 250px;
   padding-bottom: 2rem;
   border-bottom: 2px solid #fff;
 }
@@ -635,11 +638,12 @@ h6 {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   right: 0;
   background-color: #131416;
   overflow-x: hidden;
+  overflow-y: hidden;
   transition: 0.3s;
   padding-top: 60px;
 }
