--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -21,11 +21,12 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     right: 0;
     background-color: $babish-black;
     overflow-x: hidden;
+    overflow-y: hidden;
     transition: 0.3s;
     padding-top: 60px;
     li:first-child {
